--- a/cftwo.yml
+++ b/cftwo.yml
@@ -308,6 +308,14 @@ Resources:
           FromPort: '3000'
           ToPort: '3000'
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: '3001'
+          ToPort: '3001'
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: '3306'
+          ToPort: '3306'
+          CidrIp: 0.0.0.0/0
       VpcId: !Ref VPC
 
   WebServerSecurityGroup:
@@ -329,6 +337,14 @@ Resources:
         - IpProtocol: tcp
           FromPort: 3000
           ToPort: 3000
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: '3001'
+          ToPort: '3001'
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: '3306'
+          ToPort: '3306'
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: '80'
