--- a/cftwo.yml
+++ b/cftwo.yml
@@ -10,7 +10,7 @@ Parameters:
   DatabaseName:
     AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
     ConstraintDescription: Must begin with a letter and contain only alphanumeric characters
-    Default: applicationdb
+    Default: applicationdbnode
     Description: MySQL database name
     MaxLength: 64
     MinLength: 1
@@ -19,7 +19,7 @@ Parameters:
   DatabaseUser:
     AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
     ConstraintDescription: Must begin with a letter and contain only alphanumeric characters
-    Default: dbadmin
+    Default: dbadminnode
     Description: Username for MySQL database access
     MaxLength: 16
     MinLength: 1
@@ -29,7 +29,7 @@ Parameters:
   DatabasePassword:
     AllowedPattern: '[a-zA-Z0-9]*'
     ConstraintDescription: Must contain only alphanumeric characters
-    Default: database1407
+    Default: database1407node
     Description: Password for MySQL database access
     MaxLength: 41
     MinLength: 8
@@ -123,7 +123,7 @@ Parameters:
   DatabaseInstanceIdentifier:
     AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
     ConstraintDescription: Must begin with a letter and contain only alphanumeric characters
-    Default: mysql57db
+    Default: mysql57dbnode
     Description: Instance identifier name
     MaxLength: 60
     MinLength: 1
