--- a/cf.yaml
+++ b/cf.yaml
@@ -393,6 +393,14 @@ Resources:
       KeyName: !Ref KeyName
       SecurityGroupIds:
         - !Ref WebServerSecurityGroup
+      UserData:
+       Fn::Base64: !Sub |
+           #!/bin/bash -ex
+  
+           #give permission
+           sudo chmod 777 /etc/environment
+           #install node module
+           echo HOST_IP=$(curl http://checkip.amazonaws.com) >> /etc/environment
      
 
   WebServerTargetPolicy:
