--- a/cftwo.yml
+++ b/cftwo.yml
@@ -316,6 +316,10 @@ Resources:
           FromPort: '3306'
           ToPort: '3306'
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: '443'
+          ToPort: '443'
+          CidrIp: 0.0.0.0/0
       VpcId: !Ref VPC
 
   WebServerSecurityGroup:
